apply format-source/refaster, fix REUSE headers